--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.12.0",
     "react-drop-zone": "^3.0.7",
     "react-dropzone": "^10.2.1",
@@ -25,7 +26,8 @@
     "reactstrap": "^8.1.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
