--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "linkedinmockup",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "13.3.0",
+    "npm": "6.13.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
